--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+# VSCworkspace
+*.code-workspace
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -53,6 +59,8 @@ coverage.xml
 # Translations
 *.mo
 *.pot
+
+
 
 # Django stuff:
 *.log
