added role functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 # VSCworkspace
 *.code-workspace
+settings.json
 
 
 
@@ -130,3 +131,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.vscode/settings.json
+.vscode/settings.json
